--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -30,34 +30,42 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 ```
 
 ```{r load data and functions, echo=FALSE, include=FALSE, cache=FALSE}
-minYear <- 2002
+minYear <- 2010
 load("../data/OpenData.RData")
 load("../data/OpenData_sardist.RData")
 load("../data/SecureData.RData")
-#load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
+load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
 load("../data/MARFISSCI.SPECIES.RData")
-ISDB_info<-file.info("../data/ISDB.ISSETTYPECODES.RData")
-MARFIS_info<-file.info("../data/MARFISSCI.SPECIES.RData")
+#ISDB_info<-file.info("../data/ISDB.ISSETTYPECODES.RData")
+#MARFIS_info<-file.info("../data/MARFISSCI.SPECIES.RData")
 lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
 ```
 
 ```{r Search Area and setup.R, echo=FALSE, include=FALSE, cache=FALSE}
-#studyArea <- st_read("{{path_to_geoms}}")
-#studyArea <- st_read("geoms_slc.geojson")
+#studyArea <- sf::st_read("{{path_to_geoms}}")
+studyArea <- sf::st_read("geoms_slc.geojson")
+
 # Uncomment the following to Test Outside the App:
-#studyArea <- st_read("../Rmd/geoms_slc_test.geojson")#Offshore
-#studyArea <- st_read("../Rmd/geoms_slc_coastal_test.geojson")#coastal 
-studyArea <- st_read("../Rmd/geoms_slc_no_land.geojson")#no land
-site <- sf::st_centroid(studyArea)  
-lapply(list.files("../Rmd", pattern = ".[Rr]$", full.names = TRUE),source)
-#lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
+# studyArea <- st_read("../studyAreaTest/geoms_slc_test.geojson")#Offshore
+# studyArea <- st_read("../studyAreaTest/geoms_slc_coastal_test.geojson")#coastal 
+# studyArea <- st_read("../studyAreaTest/geoms_slc_no_land.geojson")#no land
+
+site <- sf::st_centroid(studyArea) 
 ```
 
-#```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', #'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')}
+# ```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', #'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')}
+# ```
+#```{r child = '../Rmd/report_fish_EN.Rmd'}
 #```
 
-```{r child = '../Rmd/report_fish_EN.Rmd'}
+```{r parameters for area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
+land_layer<-land50k_sf
+studyBox_geom <- geom_sf(data=studyArea, fill=NA, col="red", size=1) # Define studyBox geometry "look".
+areaMapList<-area_map(studyArea,site,land_layer, 5, bounds_sf,studyBox_geom)
+areaMap=areaMapList[[1]] # map
+bboxMap=areaMapList[[2]] #bounding box of the map
 ```
+
 
 <!-- END  -->
 
@@ -105,8 +113,8 @@ table_tier <- read.csv("../data/misc/table_tiers_EN.csv")
 ```
 ```{r}
 knitr::kable(table_tier,align="l", 
-      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.", booktabs = T, escape = F, linesep="") %>%
-    kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+      caption = "Quality Tiers defined to describe sources of information queried and summarized in this report.", booktabs = T, escape = F, linesep="") 
+# %>% kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
 # **SEARCH RESULTS**  
