--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -8,6 +8,30 @@ Please refer to WHALEMAP [@whalemap] https://whalemap.ocean.dal.ca for additiona
 
 This section does not endeavor to describe every source of information available; the data presented does not represent all available cetacean sightings data within the search area and additional sightings may be available from other sources, or more recent data may be available than what is presented here. In addition to the presence-only data, there may be data available that can be used to support species-specific conclusions about habitat preferences and possible or known occurrence near and within the search area. Please refer to the cited publications for additional information and contact Angelia Vanderlaan (North Atlantic Right Whales) and Hilary Moors-Murphy (other cetacean species) to discuss additional sources of information (e.g., acoustic detections). Data and sources not explicitly included in this report include information from past studies/publications, acoustic detections, prey sampling and tagging. While the value of these data in predicting and describing cetacean occurrence is vital, these types of data are not available for all species and are not yet available for data querying. In the future, as information from other data sources becomes available, these new data will help to provide a more comprehensive understanding of cetacean habitat use and occurrence in the search areas.
 
+```{r cetacean setup, echo=FALSE, include=FALSE, cache=FALSE}
+fin_whale_sf<-stars::st_as_stars(fin_whale)%>%sf::st_as_sf()
+harbour_porpoise_sf<-stars::st_as_stars(harbour_porpoise)%>%sf::st_as_sf()
+humpback_whale_sf<-stars::st_as_stars(humpback_whale)%>%sf::st_as_sf()
+sei_whale_sf<-stars::st_as_stars(sei_whale)%>%sf::st_as_sf()
+
+## Filter files used in multiple sections by minYeardefined in intro Rmd
+obis_sf <- obis_sf %>% dplyr::filter(year >= minYear)
+wsdb <- wsdb %>% dplyr::filter(YEAR >= minYear)
+whitehead$YEAR<-lubridate::year(whitehead$Date)
+whitehead <- whitehead %>% dplyr::filter(YEAR >= minYear)
+narwc <- narwc %>% dplyr::filter(YEAR >= minYear)
+
+whale_col=values=c("Blue Whale: Endangered (SARA & COSEWIC)"="black",
+                   "Fin Whale: Special Concern (SARA & COSEWIC)"="chartreuse4",
+                   "Harbour Porpoise: Threatened (SARA) Special Concern   (COSEWIC)"="darkgoldenrod1",
+                   "Killer Whale: No Status (SARA) & Special Concern (COSEWIC)"="#00AFBB",
+                   "North Atlantic Right Whale: Endangered (SARA & COSEWIC)"="darkorchid4",
+                   "Northern Bottlenose Whale: Endangered (SARA & COSEWIC)"="#0827EF",
+                   "Sei Whale: No Status (SARA) & Endangered (COSEWIC)"="#EF6408",
+                   "Sowerby's Beaked Whale: Special Concern (SARA & COSEWIC)"="#F5A4E7"
+                   )
+```
+
 ### **Whale Sightings Database (WSDB)**  
 
 Contact: <XMARWhaleSightings@dfo-mpo.gc.ca>
@@ -110,26 +134,26 @@ The NARWC Sightings Database contains records of thousands of sightings of Right
 
 #### ***Area-specific NARWC search results***
 ```{r narwc, include=FALSE, cache=FALSE}
-narwc_filter <- filter_narwc(narwc)
-narwc_intersect_points <-intersect_points_narwc(narwc_filter, studyArea)
-Total_number_records_narwc <- nrow(narwc_intersect_points)
+# narwc_filter <- filter_narwc(narwc)
+# narwc_intersect_points <-intersect_points_narwc(narwc_filter, studyArea)
+# Total_number_records_narwc <- nrow(narwc_intersect_points)
 ```
 *
 ```{r narwc result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Query_output_narwc<-if(Total_number_records_narwc < 1){
-  "There are no relevant records in the NARWC data base for the defiend search area."
-} else {
-  "There are relevant records in the NARWC data base for the defiend search area."
-}
-writeLines(Query_output_narwc)
+# Query_output_narwc<-if(Total_number_records_narwc < 1){
+#   "There are no relevant records in the NARWC data base for the defiend search area."
+# } else {
+#   "There are relevant records in the NARWC data base for the defiend search area."
+# }
+# writeLines(Query_output_narwc)
 ```
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Map displays information from the North Atlantic Right Whale Consortium (NARWC) Sightings Database, for cetacean species in the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listing. <b>Absence of a species in the map should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area</b> since survey effort is biased towards the Northeast US, and data on species presence from acoustic detections is not included. For more information, please visit: <https://www.narwc.org/sightings-database.html>'}
-par(mfrow = c(1,2), mar=c(0, 0, 5.5, 0) + 2)#it goes c(bottom, left, top, right)
-narwc_plot<-site_map(studyArea,site,land50k_sf,5, bounds_sf)+
-  geom_point(data = narwc_intersect_points, aes(x = long, y = lat, color=CommonName_status), 
-             size = 2, shape = 1)+
-  theme(legend.text=element_text(size=rel(0.9)))
-if(Total_number_records_narwc > 1){print(narwc_plot + ggplot2::scale_colour_manual(values=whale_col))}
+# par(mfrow = c(1,2), mar=c(0, 0, 5.5, 0) + 2)#it goes c(bottom, left, top, right)
+# narwc_plot<-site_map(studyArea,site,land50k_sf,5, bounds_sf)+
+#   geom_point(data = narwc_intersect_points, aes(x = long, y = lat, color=CommonName_status), 
+#              size = 2, shape = 1)+
+#   theme(legend.text=element_text(size=rel(0.9)))
+# if(Total_number_records_narwc > 1){print(narwc_plot + ggplot2::scale_colour_manual(values=whale_col))}
 ```
 
 ### **Ocean Biodiversity Information System (OBIS) [for cetaceans]**  
@@ -144,27 +168,27 @@ An OBIS search [@OBIS] was conducted to find additional relevant records for cet
 
 #### ***Area-specific OBIS cetacean search results***
 ```{r obis, include=FALSE, cache=FALSE}
-obis_sf_filter <- filter_obis_cet(obis_sf)
-obis_intersect_points_cet <-intersect_points_obis_cet(obis_sf_filter, studyArea)
-Total_number_cet_records_obis <- nrow(obis_intersect_points_cet)
+# obis_sf_filter <- filter_obis_cet(obis_sf)
+# obis_intersect_points_cet <-intersect_points_obis_cet(obis_sf_filter, studyArea)
+# Total_number_cet_records_obis <- nrow(obis_intersect_points_cet)
 ```
 *
 ```{r obis result, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Query_output_obis<-if(Total_number_cet_records_obis < 1){
-  "There are no relevant records of cetaceans in the Ocean Biodiversity Information System (OBIS) for this search area."
-} else {
-  "There are relevant records of cetaceans in the Ocean Biodiversity Information System (OBIS) for this search area."
-}
-writeLines(Query_output_obis)
+# Query_output_obis<-if(Total_number_cet_records_obis < 1){
+#   "There are no relevant records of cetaceans in the Ocean Biodiversity Information System (OBIS) for this search area."
+# } else {
+#   "There are relevant records of cetaceans in the Ocean Biodiversity Information System (OBIS) for this search area."
+# }
+# writeLines(Query_output_obis)
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Map displays information from the Ocean Biodiversity Information System (OBIS), for cetacean species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listing. <b>The absence of a species in this map should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b> Absence may be related to low or no survey effort. Sightings information is known to underrepresent the presence of cetaceans, particularly deep diving species (e.g., beaked whales) that spend little time at the surface. This map also does not include acoustic detections. Sightings on land are an indicator that the sighting data have not yet been completely error-checked or that animals were sighted from shore.'}
-par(mfrow = c(1,2), mar=c(0, 0, 5.5, 0) + 2)#it goes c(bottom, left, top, right)
-obis_plot<-site_map(studyArea,site,land50k_sf,5,bounds_sf)+
-  geom_point(data = obis_intersect_points_cet, aes(x = long, y = lat, color=CommonName_status), 
-             size = 2, shape = 1)+
-  theme(legend.text=element_text(size=rel(0.9)))
-if(Total_number_cet_records_obis > 1){print(obis_plot + ggplot2::scale_colour_manual(values=whale_col))}
+# par(mfrow = c(1,2), mar=c(0, 0, 5.5, 0) + 2)#it goes c(bottom, left, top, right)
+# obis_plot<-site_map(studyArea,site,land50k_sf,5,bounds_sf)+
+#   geom_point(data = obis_intersect_points_cet, aes(x = long, y = lat, color=CommonName_status), 
+#              size = 2, shape = 1)+
+#   theme(legend.text=element_text(size=rel(0.9)))
+# if(Total_number_cet_records_obis > 1){print(obis_plot + ggplot2::scale_colour_manual(values=whale_col))}
 ```
 
 ### **Species Distribution Models (SDM): Priority Areas to Enhance Monitoring of Cetaceans**  
@@ -182,16 +206,15 @@ Important usage considerations: model predictions in this section should not be 
 
 #### ***Area-specific SDM cetacean search results***
 ```{r sdm, include=FALSE, cache=FALSE}
-table_sdm <- sdm_table(fin_whale_sf, harbour_porpoise_sf, humpback_whale_sf, sei_whale_sf, studyArea)
+# table_sdm <- sdm_table(fin_whale_sf, harbour_porpoise_sf, humpback_whale_sf, sei_whale_sf, studyArea)
 ```
 ```{r}
-knitr::kable(table_sdm, align="cccc", caption="Quality Tier: Low. Security level: none. Results showing if the search area overlap with predicted Priority Areas to Enhance Monitoring of several species of cetaceans (Fin Whale, Harbour Porpoise, Humpback Whale and Sei Whale). TRUE = polygon does overlap with priority area; FALSE = polygon does NOT overlap with priority area.", booktabs = T, escape = F, linesep="") %>%
-  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
-
+# knitr::kable(table_sdm, align="cccc", caption="Quality Tier: Low. Security level: none. Results showing if the search area overlap with predicted Priority Areas to Enhance Monitoring of several species of cetaceans (Fin Whale, Harbour Porpoise, Humpback Whale and Sei Whale). TRUE = polygon does overlap with priority area; FALSE = polygon does NOT overlap with priority area.", booktabs = T, escape = F, linesep="") %>%
+#   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Low. Security level: none. Map shows consolidated Species Distribution Modelling outputs (60-100% relative predicted occurrence rate). Yellow polygons (habitats with high suitability) are to be interpreted as areas where cetacean monitoring efforts may be prioritized, and results can help direct future survey efforts. Due to the many reasons listed in the discussion section in Gomez et al. (2020), these cetacean modelling outputs do not represent a complete and current distribution of cetaceans in the region. They represent priority areas to direct cetacean monitoring efforts. Their use in marine spatial planning processes should be accompanied by complementary approaches such as the process summarized in the section below. The data product summarized in the section below (Blue Whale Important Habitat in the Western North Atlantic) represents an excellent framework in which to properly use the outputs of this figure.'}
-plot_cetaceans_4grid(fin_whale_sf, harbour_porpoise_sf, humpback_whale_sf, sei_whale_sf, studyArea, land10m_sf, 200, bounds_sf)
+# plot_cetaceans_4grid(fin_whale_sf, harbour_porpoise_sf, humpback_whale_sf, sei_whale_sf, studyArea, land10m_sf, 200, bounds_sf)
 ```
 
 ### **Blue Whale Important Habitat**  
@@ -209,20 +232,20 @@ Please see a list of all sources of information used in @Lesage2018 and the Open
 #### ***Area-specific Blue Whale Important Habitat search results***
 *
 ```{r bw result, echo=FALSE, results='asis'}
-BW<-blue_whale_habitat_overlap(Blue_Whale_sf, studyArea)
-writeLines(BW)
+# BW<-blue_whale_habitat_overlap(Blue_Whale_sf, studyArea)
+# writeLines(BW)
 ```
 ```{r bw plots, echo=FALSE, results='asis'}
-BW_wide<-plot_bw_hab(Blue_Whale_sf, studyArea, land10m_sf, bounds_sf)
-BW_zoom<-plot_bw_hab_zoom(Blue_Whale_sf, studyArea, land50k_sf, 100, bounds_sf)
+# BW_wide<-plot_bw_hab(Blue_Whale_sf, studyArea, land10m_sf, bounds_sf)
+# BW_zoom<-plot_bw_hab_zoom(Blue_Whale_sf, studyArea, land50k_sf, 100, bounds_sf)
 ```
 
 ```{r, fig.height=4, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Blue Whale Important Habitat in the Western North Atlantic. Polygons delimit areas in Canadian waters that are important to Blue Whales for foraging and migration. These areas identified in the report by Lesage et al. (2018) are considered important for the survival and recovery of Blue Whales from the western North Atlantic population. Blue Whales most likely need to use several of these important habitats to fulfill their biological needs. As a result, access corridors and habitat they connect need to be considered equally important for the population.'}
-grid.arrange(BW_wide, BW_zoom,
-             bottom = expression(paste("Longitude ",degree,"N",sep="")),
-             left = expression(paste("Latitude ",degree,"N",sep="")),
-             nrow = 1,
-             widths = c(4.1/10, 5.9/10))
+# grid.arrange(BW_wide, BW_zoom,
+#              bottom = expression(paste("Longitude ",degree,"N",sep="")),
+#              left = expression(paste("Latitude ",degree,"N",sep="")),
+#              nrow = 1,
+#              widths = c(4.1/10, 5.9/10))
 ```
 
 ### **Northern bottlenose whale important habitat in inter-canyon areas on the eastern Scotian Shelf**  
@@ -244,18 +267,18 @@ The inter-canyon habitat area polygon was delineated using the 500 m depth conto
 #### ***Area-specific Northern Bottlenose Whale Important Habitat in inter-canyon areas on the eastern Scotian Shelf search results*** 
 *
 ```{r nbnw result, echo=FALSE, results='asis'}
-NBNW<-intersect_NBNW_overlap(NBNW_CritHab_sf, studyArea)
-writeLines(NBNW)
+# NBNW<-intersect_NBNW_overlap(NBNW_CritHab_sf, studyArea)
+# writeLines(NBNW)
 ```
 ```{r nbnw plots, echo=FALSE, results='asis'}
-NBNW_wide<-plot_NBNW_hab(NBNW_CritHab_sf, studyArea, land10m_sf, bounds_sf)
-NBNW_zoom<-plot_NBNW_hab_zoom(NBNW_CritHab_sf, studyArea, land50k_sf, 100, bounds_sf)
+# NBNW_wide<-plot_NBNW_hab(NBNW_CritHab_sf, studyArea, land10m_sf, bounds_sf)
+# NBNW_zoom<-plot_NBNW_hab_zoom(NBNW_CritHab_sf, studyArea, land50k_sf, 100, bounds_sf)
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Proposed Northern Bottlenose Whales important habitat in inter-canyon areas on the eastern Scotian Shelf. Northern Bottlenose Whales are present year-round in the inter-canyon areas, which function as foraging habitat and movement corridors. Note that the full extent of important habitat for Scotian Shelf Northern Bottlenose Whales remains unknown. Please see additional information in <a href="http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf">DFO 2020</a>.'}
-grid.arrange(NBNW_wide, NBNW_zoom,
-             bottom = expression(paste("Longitude ",degree,"N",sep="")),
-             left = expression(paste("Latitude ",degree,"N",sep="")),
-             nrow = 1,
-             widths = c(4.1/10, 5.9/10))
+# grid.arrange(NBNW_wide, NBNW_zoom,
+#              bottom = expression(paste("Longitude ",degree,"N",sep="")),
+#              left = expression(paste("Latitude ",degree,"N",sep="")),
+#              nrow = 1,
+#              widths = c(4.1/10, 5.9/10))
 ```
