--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -32,9 +32,9 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 ```{r load data and functions, echo=FALSE, include=FALSE, cache=FALSE}
 minYear <- 2010
 load("../data/OpenData.RData")
-load("../data/OpenData_sardist.RData")
+#load("../data/OpenData_sardist.RData")
 load("../data/SecureData.RData")
-load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
+#load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
 load("../data/MARFISSCI.SPECIES.RData")
 #ISDB_info<-file.info("../data/ISDB.ISSETTYPECODES.RData")
 #MARFIS_info<-file.info("../data/MARFISSCI.SPECIES.RData")
@@ -43,10 +43,10 @@ lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source)
 
 ```{r Search Area and setup.R, echo=FALSE, include=FALSE, cache=FALSE}
 #studyArea <- sf::st_read("{{path_to_geoms}}")
-studyArea <- sf::st_read("geoms_slc.geojson")
+#studyArea <- sf::st_read("geoms_slc.geojson")
 
 # Uncomment the following to Test Outside the App:
-# studyArea <- st_read("../studyAreaTest/geoms_slc_test.geojson")#Offshore
+ studyArea <- st_read("../studyAreaTest/geoms_slc_test.geojson")#Offshore
 # studyArea <- st_read("../studyAreaTest/geoms_slc_coastal_test.geojson")#coastal 
 # studyArea <- st_read("../studyAreaTest/geoms_slc_no_land.geojson")#no land
 
